Updated fix for iOS weather bar wrapping

--- a/style.css
+++ b/style.css
@@ -165,6 +165,8 @@ header{
     gap: 0 25px;
     align-items: center;
     padding: 0 10px;
+    flex-shrink: 0;
+    flex-grow: 1;
 }
 
 .weather-bar-time{
